refactor(file): improve path handling and validation